Fixes issue of single quote within styles breaks in JS

--- a/integration/project1/src/awesomeness/component.css
+++ b/integration/project1/src/awesomeness/component.css
@@ -1,4 +1,5 @@
 .check {
+  content: 'check';
   background-color: black;
 }
 
